Feat(#17): 서비스단중복되는로직수정과 예외처리수정